# quant-paper

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DESIGN_DOCS.md  README.md  SETUP.md  config.yaml  pdfparse.py  pyproject.toml  quant_scholar.py  quantmind_cli.py  requirements.txt  test_new_architecture.py
.github/workflows/: quant_scholar.yml  update_paper_links.yml
autoscholar/crawler/: __init__.py  arxiv_crawler.py  base_crawler.py  github_crawler.py
autoscholar/knowledge/: graph_builder.py
autoscholar/parser/: llama_parser.py  parse_tool.py  pdf_parser.py
autoscholar/scholar_summary/demo/: demo.py  template.tex
autoscholar/scholar_summary/demo/2503.08696/: 2503.08696.md  2503.08696_meta.json  demo_summary.tex
docs/: papers.md  quant-scholar.json
example/: 2503.03612.json
examples/: basic_usage.py  config_example.py  logger_demo.py
examples/crawler/: config_sample.yaml  run_arxiv_crawler.py  run_github_crawler.py
examples/kg_by_abstract/: demo.py
examples/kg_by_abstract/example-data/: 2502.15458.json  2502.15611.json  2502.15853.json  2502.16023.json  2502.17044.json  2502.17967.json  2502.18177.json  2502.19305.json  2502.20978.json  2503.00603.json  2503.02518.json  2503.02680.json  2503.03612.json  2503.08692.json  2503.08693.json  2503.08696.json  2503.08697.json  2503.13950.json  2503.15403.json  2503.16470.json
examples/kg_by_abstract/example-data/embeddings/: embeddings.json
examples/parser/: llama_parser_example.ipynb  simple_llama_parser.py
examples/pipeline/: arxiv_llama_pipeline.py
examples/research/: llm_analysis_example.py
examples/sources/: README.md  advanced_configuration.py  basic_arxiv_usage.py
quantmind/: __init__.py
quantmind/config/: __init__.py  parsers.py  settings.py  sources.py
quantmind/models/: __init__.py  content.py  knowledge_graph.py  paper.py
quantmind/parsers/: __init__.py  base.py  llama_parser.py  pdf_parser.py
quantmind/research/: __init__.py  models.py  paper_analyzer.py  qa_generator.py  tag_analyzer.py
quantmind/sources/: __init__.py  arxiv_source.py  base.py
quantmind/storage/: __init__.py  base.py  json_storage.py
quantmind/tagger/: __init__.py  base.py  llm_tagger.py  rule_tagger.py
quantmind/utils/: __init__.py  env.py  logger.py
quantmind/workflow/: __init__.py  agent.py  pipeline.py  tasks.py
scripts/: lint.sh  unittest.sh
tests/config/: test_settings.py
tests/knowledge/: test_knowledge_graph.py
tests/models/: test_paper.py
tests/parser/: test_pdfparse.py
tests/parsers/: test_llama_parser.py  test_pdf_parser.py
tests/research/: test_llm_analysis.py
tests/sources/: test_arxiv_source.py  test_base_source.py
tests/tagger/: test_rule_tagger.py
tests/workflow/: test_tasks.py
wiki/: index.md
